	PR c++/53650 	* call.c (type_has_extended_temps): New. 	* cp-tree.h: Declare it. 	* decl.c (check_initializer): Use build_aggr_init for arrays 	if it is false. 	* init.c (build_vec_init): Avoid mixed signed/unsigned arithmetic.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@194860 138bc75d-0d04-0410-961f-82ee72b054a4